--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.37.3",
     "serve-favicon": "~2.4.5"
   }
 }
